[lworld] [AArch64] Broken fast class init barrier for static calls in c2i adapter

XMLWordPrintable

    • aarch64

      The code in SharedRuntime::generate_i2c2i_adapters() to generate the fast class initialisation barrier for static calls is wrong on the lworld branch (the check for static method-ness checks the wrong bit). Probably caused by a merged conflict at some point. Fix it to be the same as mainline.

            Assignee:
            Nick Gasson
            Reporter:
            Nick Gasson
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: