8265184: [lworld] [AArch64] Broken fast class init barrier for static calls in c2i adapter

Reviewed-by: thartmann